New Facebook link

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -206,7 +206,7 @@ header nav {
 header .logo {
   width: 250px;
   height: 75px;
-  background: url('/images/site/logo.png?1422656915') no-repeat 0 0;
+  background: url('/images/site/logo.png?1422661587') no-repeat 0 0;
   background-size: 100%;
   position: absolute;
   left: 50%;
@@ -368,18 +368,29 @@ footer ul li {
 footer ul li:last-child {
   border-right: none;
 }
-
 /* line 157, sass/main.sass */
+footer ul li.facebook a {
+  text-indent: -10000px;
+  background-image: url('/images/site/facebook.png?1422904062');
+  width: 18px;
+  height: 18px;
+  position: relative;
+  top: -2px;
+  display: inline-block;
+  background-size: 100%;
+}
+
+/* line 167, sass/main.sass */
 .banners {
   height: 100%;
   position: relative;
   z-index: 0;
 }
-/* line 162, sass/main.sass */
+/* line 172, sass/main.sass */
 #home .banners .banner .banner-cta {
   bottom: 165px;
 }
-/* line 164, sass/main.sass */
+/* line 174, sass/main.sass */
 .banners .banner-arrows {
   position: absolute;
   z-index: 10;
@@ -387,7 +398,7 @@ footer ul li:last-child {
   margin-top: -30px;
   width: 100%;
 }
-/* line 170, sass/main.sass */
+/* line 180, sass/main.sass */
 .banners .banner-arrows li {
   width: 32px;
   height: 60px;
@@ -408,34 +419,34 @@ footer ul li:last-child {
   transition-duration: 0.2s;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 170, sass/main.sass */
+  /* line 180, sass/main.sass */
   .banners .banner-arrows li {
     background-image: url("../images/site/arrows@2x.png");
     background-size: 64px 60px;
   }
 }
-/* line 182, sass/main.sass */
+/* line 192, sass/main.sass */
 .banners .banner-arrows li:hover {
   opacity: 0.6;
 }
-/* line 184, sass/main.sass */
+/* line 194, sass/main.sass */
 .banners .banner-arrows li.previous {
   background-position: top left;
   left: 20px;
 }
-/* line 187, sass/main.sass */
+/* line 197, sass/main.sass */
 .banners .banner-arrows li.next {
   background-position: top right;
   right: 20px;
 }
-/* line 191, sass/main.sass */
+/* line 201, sass/main.sass */
 .banners .banner-dots {
   position: absolute;
   z-index: 10;
   top: 657px;
   left: 50%;
 }
-/* line 196, sass/main.sass */
+/* line 206, sass/main.sass */
 .banners .banner-dots li {
   width: 22px;
   height: 22px;
@@ -446,18 +457,18 @@ footer ul li:last-child {
   margin-right: 8px;
   display: inline-block;
 }
-/* line 205, sass/main.sass */
+/* line 215, sass/main.sass */
 .banners .banner-dots li:last-child {
   margin-right: 0;
 }
-/* line 207, sass/main.sass */
+/* line 217, sass/main.sass */
 .banners .banner-dots li.active {
   border: 3px solid #fff;
   width: 16px;
   height: 16px;
   background-color: transparent;
 }
-/* line 213, sass/main.sass */
+/* line 223, sass/main.sass */
 .banners.banner_slideshow .banner {
   position: absolute;
   left: 0;
@@ -466,7 +477,7 @@ footer ul li:last-child {
   bottom: 0;
   opacity: 0;
 }
-/* line 220, sass/main.sass */
+/* line 230, sass/main.sass */
 .banners.banner_slideshow .banner.active {
   opacity: 1;
   z-index: 5;
@@ -479,11 +490,11 @@ footer ul li:last-child {
   -webkit-transition-duration: 1s;
   transition-duration: 1s;
 }
-/* line 225, sass/main.sass */
+/* line 235, sass/main.sass */
 .banners.banner_slideshow .banner.previously_active {
   opacity: 1;
 }
-/* line 227, sass/main.sass */
+/* line 237, sass/main.sass */
 .banners .banner {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -496,11 +507,11 @@ footer ul li:last-child {
   text-align: center;
   color: #fff;
 }
-/* line 237, sass/main.sass */
+/* line 247, sass/main.sass */
 .banners .banner.with_cta .banner-headline-container {
   height: 70%;
 }
-/* line 239, sass/main.sass */
+/* line 249, sass/main.sass */
 .banners .banner .banner-headline-container {
   max-width: 1000px;
   margin: 0 auto;
@@ -508,7 +519,7 @@ footer ul li:last-child {
   display: table;
   height: 93%;
 }
-/* line 245, sass/main.sass */
+/* line 255, sass/main.sass */
 .banners .banner .banner-headline {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 42px;
@@ -517,7 +528,7 @@ footer ul li:last-child {
   vertical-align: middle;
   text-align: center;
 }
-/* line 252, sass/main.sass */
+/* line 262, sass/main.sass */
 .banners .banner .banner-cta {
   font-size: 24px;
   font-style: italic;
@@ -528,7 +539,7 @@ footer ul li:last-child {
   right: 0;
   bottom: 65px;
 }
-/* line 261, sass/main.sass */
+/* line 271, sass/main.sass */
 .banners .banner .banner-cta .banner-cta-interior {
   display: inline-block;
   cursor: pointer;
@@ -536,13 +547,13 @@ footer ul li:last-child {
   padding: 20px 60px;
   line-height: 42px;
 }
-/* line 268, sass/main.sass */
+/* line 278, sass/main.sass */
 .banners .banner .banner-video p {
   position: relative;
   padding-left: 50px;
   top: 1px;
 }
-/* line 272, sass/main.sass */
+/* line 282, sass/main.sass */
 .banners .banner .banner-video p:before {
   content: "";
   width: 42px;
@@ -557,85 +568,85 @@ footer ul li:last-child {
   top: -2px;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 272, sass/main.sass */
+  /* line 282, sass/main.sass */
   .banners .banner .banner-video p:before {
     background-image: url("../images/site/play@2x.png");
     background-size: 42px 42px;
   }
 }
-/* line 284, sass/main.sass */
+/* line 294, sass/main.sass */
 .banners #wine-page-banner {
   background-image: url('/images/banners/wine-banner.jpg?1422407618');
 }
-/* line 286, sass/main.sass */
+/* line 296, sass/main.sass */
 .banners #news-page-banner {
   background-image: url('/images/banners/news-banner.jpg?1422470749');
 }
-/* line 288, sass/main.sass */
+/* line 298, sass/main.sass */
 .banners #news-page-banner .banner-headline {
   font-size: 72px;
 }
 
-/* line 293, sass/main.sass */
+/* line 303, sass/main.sass */
 .hidden-video {
   height: 450px;
   overflow: hidden;
   display: none;
 }
 
-/* line 300, sass/main.sass */
+/* line 310, sass/main.sass */
 .container {
   width: 1005px;
   margin: 0 auto;
   position: relative;
 }
-/* line 304, sass/main.sass */
+/* line 314, sass/main.sass */
 #home main#content .container {
   margin-top: 0;
   margin-bottom: 0;
 }
-/* line 307, sass/main.sass */
+/* line 317, sass/main.sass */
 main#content .container {
   margin-top: 80px;
   margin-bottom: 40px;
 }
-/* line 310, sass/main.sass */
+/* line 320, sass/main.sass */
 .container h1 {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 72px;
 }
-/* line 313, sass/main.sass */
+/* line 323, sass/main.sass */
 .container #wine h1 {
   font-size: 94px;
 }
-/* line 315, sass/main.sass */
+/* line 325, sass/main.sass */
 .container p {
   font-size: 18px;
   line-height: 28px;
   margin-bottom: 10px;
 }
-/* line 319, sass/main.sass */
+/* line 329, sass/main.sass */
 .container strong {
   font-weight: bold;
 }
-/* line 321, sass/main.sass */
+/* line 331, sass/main.sass */
 .container em {
   font-style: italic;
 }
-/* line 323, sass/main.sass */
+/* line 333, sass/main.sass */
 .container ul {
   padding-left: 25px;
   font-size: 18px;
   line-height: 28px;
   padding-right: 100px;
 }
-/* line 328, sass/main.sass */
+/* line 338, sass/main.sass */
 .container ul li {
   list-style: disc;
   margin-bottom: 10px;
 }
 
-/* line 333, sass/main.sass */
+/* line 343, sass/main.sass */
 .page-content:after {
   content: "";
   clear: both;
@@ -643,26 +654,26 @@ main#content .container {
   height: 1px;
   display: block;
 }
-/* line 339, sass/main.sass */
+/* line 349, sass/main.sass */
 .page-content .page-image {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 343, sass/main.sass */
+/* line 353, sass/main.sass */
 .page-content .page-image img {
   width: 334px;
 }
-/* line 345, sass/main.sass */
+/* line 355, sass/main.sass */
 .page-content .page-text {
   float: left;
   width: 596px;
 }
-/* line 348, sass/main.sass */
+/* line 358, sass/main.sass */
 .page-content .page-text h1 {
   margin-bottom: 35px;
 }
-/* line 350, sass/main.sass */
+/* line 360, sass/main.sass */
 .page-content .page-text h2 {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -678,7 +689,7 @@ main#content .container {
   font-size: 30px;
   line-height: 68px;
 }
-/* line 362, sass/main.sass */
+/* line 372, sass/main.sass */
 .page-content .page-text h2:after {
   content: "";
   width: 25px;
@@ -693,54 +704,54 @@ main#content .container {
   background-position: 0 0;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 362, sass/main.sass */
+  /* line 372, sass/main.sass */
   .page-content .page-text h2:after {
     background-image: url("../images/site/accordion@2x.png");
     background-size: 25px 98px;
   }
 }
-/* line 374, sass/main.sass */
+/* line 384, sass/main.sass */
 .page-content .page-text h2.active:after {
   top: 20px;
   background-position: 0 bottom;
 }
-/* line 377, sass/main.sass */
+/* line 387, sass/main.sass */
 .page-content .page-text .page-text-block {
   display: none;
   margin: 35px 0;
 }
-/* line 380, sass/main.sass */
+/* line 390, sass/main.sass */
 .page-content .page-text .page-text-block.active {
   display: block;
 }
 
-/* line 383, sass/main.sass */
+/* line 393, sass/main.sass */
 .wine-page-content {
   display: none;
 }
-/* line 385, sass/main.sass */
+/* line 395, sass/main.sass */
 .wine-page-content.active {
   display: block;
 }
-/* line 388, sass/main.sass */
+/* line 398, sass/main.sass */
 .wine-page-content .wine-page-text .wine-specifications {
   padding: 0;
 }
-/* line 390, sass/main.sass */
+/* line 400, sass/main.sass */
 .wine-page-content .wine-page-text .wine-specifications li {
   list-style: none;
 }
-/* line 392, sass/main.sass */
+/* line 402, sass/main.sass */
 .wine-page-content .wine-page-image {
   position: relative;
 }
-/* line 394, sass/main.sass */
+/* line 404, sass/main.sass */
 .wine-page-content .wine-page-image:before {
   content: "";
   display: block;
   width: 458px;
   height: 454px;
-  background-image: url('/images/site/wine-splat.png?1422656915');
+  background-image: url('/images/site/wine-splat.png?1422661587');
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: 458px 454px;
@@ -749,7 +760,7 @@ main#content .container {
   top: 110px;
   z-index: 0;
 }
-/* line 407, sass/main.sass */
+/* line 417, sass/main.sass */
 .wine-page-content .wine-page-image img {
   float: right;
   margin-right: 5px;
@@ -758,14 +769,14 @@ main#content .container {
   z-index: 1;
 }
 
-/* line 414, sass/main.sass */
+/* line 424, sass/main.sass */
 .wine-browser {
   width: 1000px;
   margin: 0 auto;
   text-align: justify;
   padding-top: 55px;
 }
-/* line 420, sass/main.sass */
+/* line 430, sass/main.sass */
 .wine-browser li {
   display: inline-block;
   width: 160px;
@@ -777,7 +788,7 @@ main#content .container {
   padding-bottom: 15px;
   vertical-align: top;
 }
-/* line 431, sass/main.sass */
+/* line 441, sass/main.sass */
 .wine-browser li:hover:after {
   content: "";
   width: 66px;
@@ -789,38 +800,38 @@ main#content .container {
   left: 50%;
   margin-left: -33px;
 }
-/* line 441, sass/main.sass */
+/* line 451, sass/main.sass */
 .wine-browser li img {
   width: 140px;
   padding: 10px;
 }
-/* line 444, sass/main.sass */
+/* line 454, sass/main.sass */
 .wine-browser li:last-child {
   margin-right: 0;
 }
-/* line 446, sass/main.sass */
+/* line 456, sass/main.sass */
 .wine-browser li.active img {
   padding: 0;
   border: 10px solid #ED8F17;
 }
 @media screen and (min-width: 1180px) {
-  /* line 414, sass/main.sass */
+  /* line 424, sass/main.sass */
   .wine-browser {
     width: 1180px;
     padding-top: 20px;
   }
-  /* line 452, sass/main.sass */
+  /* line 462, sass/main.sass */
   .wine-browser li {
     width: 190px;
     margin-right: 57px;
   }
-  /* line 455, sass/main.sass */
+  /* line 465, sass/main.sass */
   .wine-browser li img {
     width: 170px;
   }
 }
 
-/* line 462, sass/main.sass */
+/* line 472, sass/main.sass */
 #news .awards-list li {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -830,36 +841,36 @@ main#content .container {
   vertical-align: top;
   margin-bottom: 70px;
 }
-/* line 468, sass/main.sass */
+/* line 478, sass/main.sass */
 #news .awards-list li:after {
   content: "";
   clear: both;
 }
-/* line 471, sass/main.sass */
+/* line 481, sass/main.sass */
 #news .awards-list li .left-image {
   float: left;
   margin-right: 20px;
 }
-/* line 474, sass/main.sass */
+/* line 484, sass/main.sass */
 #news .awards-list li .left-image img {
   width: 137px;
   border: 2px solid #889B9F;
 }
-/* line 477, sass/main.sass */
+/* line 487, sass/main.sass */
 #news .awards-list li .right-content {
   float: left;
   width: 296px;
 }
-/* line 480, sass/main.sass */
+/* line 490, sass/main.sass */
 #news .awards-list li .award-date {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 44px;
 }
-/* line 483, sass/main.sass */
+/* line 493, sass/main.sass */
 #news .awards-list li .award-description {
   padding-bottom: 20px;
 }
-/* line 485, sass/main.sass */
+/* line 495, sass/main.sass */
 #news .awards-list li .award-score {
   background: #ED8F17;
   width: 60px;
@@ -874,31 +885,31 @@ main#content .container {
   vertical-align: middle;
   margin-right: 10px;
 }
-/* line 498, sass/main.sass */
+/* line 508, sass/main.sass */
 #news .awards-list li .award-giver {
   display: inline-block;
   vertical-align: middle;
 }
 
-/* line 506, sass/main.sass */
+/* line 516, sass/main.sass */
 #contact .prefer_email {
   clear: both;
   padding-top: 30px;
 }
-/* line 509, sass/main.sass */
+/* line 519, sass/main.sass */
 #contact .prefer_email a {
   color: #B24629;
   text-decoration: none;
 }
-/* line 512, sass/main.sass */
+/* line 522, sass/main.sass */
 #contact .prefer_email a:hover {
   text-decoration: underline;
 }
-/* line 514, sass/main.sass */
+/* line 524, sass/main.sass */
 #contact .success {
   display: none;
 }
-/* line 516, sass/main.sass */
+/* line 526, sass/main.sass */
 #contact .errors {
   display: none;
   font-style: italic;
@@ -907,44 +918,44 @@ main#content .container {
   border-bottom: 1px solid #B24629;
   margin: 20px 0;
 }
-/* line 523, sass/main.sass */
+/* line 533, sass/main.sass */
 #contact .errors ul li {
   font-size: 14px;
   margin-bottom: 5px;
 }
-/* line 526, sass/main.sass */
+/* line 536, sass/main.sass */
 #contact .errors ul li:last-child {
   margin-bottom: 0;
 }
-/* line 528, sass/main.sass */
+/* line 538, sass/main.sass */
 #contact form {
   margin-top: 20px;
 }
-/* line 530, sass/main.sass */
+/* line 540, sass/main.sass */
 #contact form .form-left {
   float: left;
   width: 240px;
 }
-/* line 533, sass/main.sass */
+/* line 543, sass/main.sass */
 #contact form .form-right {
   float: left;
 }
-/* line 535, sass/main.sass */
+/* line 545, sass/main.sass */
 #contact form #location {
   display: none;
 }
-/* line 537, sass/main.sass */
+/* line 547, sass/main.sass */
 #contact label, #contact input, #contact button, #contact select, #contact textarea {
   font-size: 14px;
   font-weight: normal;
   line-height: 20px;
 }
-/* line 541, sass/main.sass */
+/* line 551, sass/main.sass */
 #contact .required {
   color: red;
   padding-left: 5px;
 }
-/* line 545, sass/main.sass */
+/* line 555, sass/main.sass */
 #contact input[type="submit"] {
   -webkit-appearance: button;
   display: block;
@@ -962,12 +973,12 @@ main#content .container {
   margin-top: 10px;
   width: 220px;
 }
-/* line 562, sass/main.sass */
+/* line 572, sass/main.sass */
 #contact label {
   display: block;
   margin-bottom: 5px;
 }
-/* line 566, sass/main.sass */
+/* line 576, sass/main.sass */
 #contact select, #contact textarea {
   display: inline-block;
   height: 20px;
@@ -978,7 +989,7 @@ main#content .container {
   color: #555555;
   vertical-align: middle;
 }
-/* line 578, sass/main.sass */
+/* line 588, sass/main.sass */
 #contact input[type="text"], #contact input[type="password"], #contact input[type="datetime"], #contact input[type="datetime-local"], #contact input[type="date"], #contact input[type="month"], #contact input[type="time"], #contact input[type="week"], #contact input[type="number"], #contact input[type="email"], #contact input[type="url"], #contact input[type="search"], #contact input[type="tel"], #contact input[type="color"] {
   display: inline-block;
   height: 20px;
@@ -989,11 +1000,11 @@ main#content .container {
   color: #555555;
   vertical-align: middle;
 }
-/* line 588, sass/main.sass */
+/* line 598, sass/main.sass */
 #contact input {
   width: 206px;
 }
-/* line 591, sass/main.sass */
+/* line 601, sass/main.sass */
 #contact textarea {
   width: 340px;
   height: 140px;
@@ -1007,7 +1018,7 @@ main#content .container {
   -o-transition: border linear 0.2s, box-shadow linear 0.2s;
   transition: border linear 0.2s, box-shadow linear 0.2s;
 }
-/* line 605, sass/main.sass */
+/* line 615, sass/main.sass */
 #contact input[type="text"], #contact input[type="password"], #contact input[type="datetime"], #contact input[type="datetime-local"], #contact input[type="date"], #contact input[type="month"], #contact input[type="time"], #contact input[type="week"], #contact input[type="number"], #contact input[type="email"], #contact input[type="url"], #contact input[type="search"], #contact input[type="tel"], #contact input[type="color"] {
   background-color: #ffffff;
   border: 1px solid #cccccc;
@@ -1019,7 +1030,7 @@ main#content .container {
   -o-transition: border linear 0.2s, box-shadow linear 0.2s;
   transition: border linear 0.2s, box-shadow linear 0.2s;
 }
-/* line 616, sass/main.sass */
+/* line 626, sass/main.sass */
 #contact textarea:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1027,7 +1038,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 624, sass/main.sass */
+/* line 634, sass/main.sass */
 #contact input[type="text"]:focus, #contact input[type="password"]:focus, #contact input[type="datetime"]:focus, #contact input[type="datetime-local"]:focus, #contact input[type="date"]:focus, #contact input[type="month"]:focus, #contact input[type="time"]:focus, #contact input[type="week"]:focus, #contact input[type="number"]:focus, #contact input[type="email"]:focus, #contact input[type="url"]:focus, #contact input[type="search"]:focus, #contact input[type="tel"]:focus, #contact input[type="color"]:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1035,7 +1046,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 631, sass/main.sass */
+/* line 641, sass/main.sass */
 #contact .uneditable-input:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1043,7 +1054,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 639, sass/main.sass */
+/* line 649, sass/main.sass */
 #contact input[type="radio"], #contact input[type="checkbox"] {
   margin: 4px 0 0;
   margin-top: 1px \9;
