--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -153,6 +153,16 @@ footer
       border-right: 1px solid $text-black
       &:last-child
         border-right: none
+      &.facebook
+        a
+          text-indent: -10000px
+          background-image: image-url('site/facebook.png')
+          width: 18px
+          height: 18px
+          position: relative
+          top: -2px
+          display: inline-block
+          background-size: 100%
 
 .banners
   height: 100%
